# routes/web.php
@@ -1,30 +1,11 @@
 <?php
 
 
-use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
-// Cadastrar usuário
-Route::post('/register', [UserController::class, 'store']);
-
-// Listar todos os usuários (só para teste ou admin)
-Route::get('/users', [UserController::class, 'index']);
-
-// Exibir um usuário específico
-Route::get('/users/{id}', [UserController::class, 'show']);
-
-// Atualizar usuário
-Route::put('/users/{id}', [UserController::class, 'update']);
-
-// Deletar usuário
-Route::delete('/users/{id}', [UserController::class, 'destroy']);
-
-
 Route::get('/', function () {
-    return view('welcome');
+    return response()->json(['message' => 'API FEMAQUA esta no ar']);
 });
 
-Route::get('/api/test', function () {
-    return response('teste');
-});
+
 
